--- a/fligo/package.json
+++ b/fligo/package.json
@@ -7,18 +7,21 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "formik": "^2.2.9",
+    "moment": "^2.29.4",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-inlinesvg": "^3.0.2",
+    "react-moment": "^1.1.3",
     "react-multi-carousel": "^2.8.3",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
-    "styled-components": "^5.3.9",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yub": "^0.11.1",
+    "yup": "^1.1.1"
   },
   "scripts": {
     "start": "react-app-rewired start",
