--- a/fligo/package.json
+++ b/fligo/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.6",
     "formik": "^2.2.9",
+    "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
@@ -17,6 +18,7 @@
     "react-chatbot-kit": "^2.1.2",
     "react-dom": "^18.2.0",
     "react-inlinesvg": "^3.0.2",
+    "react-modal": "^3.16.1",
     "react-moment": "^1.1.3",
     "react-multi-carousel": "^2.8.3",
     "react-router-dom": "^5.3.4",
